--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>banana speak</title>
+    <title>yoda speak</title>
   
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Potta+One&display=swap');
